fix(expandable-search): limit search width when collapsed (#8435)
* fix(expandable-search): limit search width when collapsed

* fix(expandable-search): fix jumpy animation from right

--- a/packages/components/src/components/search/_search.scss
+++ b/packages/components/src/components/search/_search.scss
@@ -247,6 +247,7 @@
   .#{$prefix}--search--sm {
     .#{$prefix}--search-close,
     ~ .#{$prefix}--search-button,
+    &.#{$prefix}--search--expandable,
     &.#{$prefix}--search--expandable .#{$prefix}--search-magnifier {
       width: rem(32px);
       height: rem(32px);
@@ -260,6 +261,7 @@
   .#{$prefix}--search--lg {
     .#{$prefix}--search-close,
     ~ .#{$prefix}--search-button,
+    &.#{$prefix}--search--expandable,
     &.#{$prefix}--search--expandable .#{$prefix}--search-magnifier {
       width: rem(40px);
       height: rem(40px);
@@ -273,6 +275,7 @@
   .#{$prefix}--search--xl {
     .#{$prefix}--search-close,
     ~ .#{$prefix}--search-button,
+    &.#{$prefix}--search--expandable,
     &.#{$prefix}--search--expandable .#{$prefix}--search-magnifier {
       width: rem(48px);
       height: rem(48px);
@@ -300,12 +303,19 @@
     }
   }
 
+  .#{$prefix}--search--expandable {
+    transition: width $duration--fast-01 motion(standard, productive);
+  }
+
+  .#{$prefix}--search--expandable.#{$prefix}--search--expanded {
+    width: 100%;
+  }
+
   .#{$prefix}--search--expandable .#{$prefix}--search-input {
     width: 0;
     padding: 0;
-    transition-timing-function: motion(standard, productive);
-    transition-duration: $duration--fast-01;
-    transition-property: width, padding;
+    transition: padding $duration--fast-01 motion(standard, productive),
+      width 0s linear $duration--fast-01;
 
     &::placeholder {
       position: relative;
@@ -319,6 +329,7 @@
   .#{$prefix}--search--expandable.#{$prefix}--search--expanded
     .#{$prefix}--search-input {
     width: 100%;
+    transition: padding $duration--fast-01 motion(standard, productive);
 
     &::placeholder {
       position: relative;
